// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostForm component should match a snapshot (PostForm.test.tsx.snap) 1`] = `
<PostForm>
  <LogInForm
    handleClose={[Function]}
    show={false}
  >
    <Modal
      animation={true}
      autoFocus={true}
      backdrop="static"
      dialogAs={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        }
      }
      enforceFocus={true}
      keyboard={false}
      onHide={[Function]}
      restoreFocus={true}
      show={false}
    >
      <Modal
        autoFocus={true}
        backdrop="static"
        backdropTransition={[Function]}
        enforceFocus={true}
        keyboard={true}
        manager={
          BootstrapModalManager {
            "handleContainerOverflow": true,
            "isRTL": false,
            "modals": Array [],
            "ownerDocument": undefined,
          }
        }
        onEnter={[Function]}
        onEntering={[Function]}
        onEscapeKeyDown={[Function]}
        onExit={[Function]}
        onExited={[Function]}
        onHide={[Function]}
        renderBackdrop={[Function]}
        renderDialog={[Function]}
        restoreFocus={true}
        show={false}
        transition={[Function]}
      />
    </Modal>
  </LogInForm>
  <Styled(Container)>
    <Container
      className="sc-dkzDqf kRrPCR"
      fluid={false}
    >
      <div
        className="sc-dkzDqf kRrPCR container"
      >
        <Form
          onSubmit={[Function]}
        >
          <form
            className=""
            onSubmit={[Function]}
          >
            <Styled(FormGroup)
              controlId="exampleForm.ControlInput1"
            >
              <FormGroup
                className="sc-hKMtZM eVOESk"
                controlId="exampleForm.ControlInput1"
              >
                <div
                  className="sc-hKMtZM eVOESk"
                >
                  <Styled(BsStarFill)
                    color="#a9a9a9"
                    key="0"
                    onClick={[Function]}
                    onMouseLeave={[Function]}
                    onMouseOver={[Function]}
                    size={24}
                  >
                    <BsStarFill
                      className="sc-eCYdqJ lmMuIV"
                      color="#a9a9a9"
                      onClick={[Function]}
                      onMouseLeave={[Function]}
                      onMouseOver={[Function]}
                      size={24}
                    >
                      <IconBase
                        attr={
                          Object {
                            "fill": "currentColor",
                            "viewBox": "0 0 16 16",
                          }
                        }
                        className="sc-eCYdqJ lmMuIV"
                        color="#a9a9a9"
                        onClick={[Function]}
                        onMouseLeave={[Function]}
                        onMouseOver={[Function]}
                        size={24}
                      >
                        <svg
                          className="sc-eCYdqJ lmMuIV"
                          color="#a9a9a9"
                          fill="currentColor"
                          height={24}
                          onClick={[Function]}
                          onMouseLeave={[Function]}
                          onMouseOver={[Function]}
                          stroke="currentColor"
                          strokeWidth="0"
                          style={
                            Object {
                              "color": "#a9a9a9",
                            }
                          }
                          viewBox="0 0 16 16"
                          width={24}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"
                            key="0"
                          />
                        </svg>
                      </IconBase>
                    </BsStarFill>
                  </Styled(BsStarFill)>
                  <Styled(BsStarFill)
                    color="#a9a9a9"
                    key="1"
                    onClick={[Function]}
                    onMouseLeave={[Function]}
                    onMouseOver={[Function]}
                    size={24}
                  >
                    <BsStarFill
                      className="sc-eCYdqJ lmMuIV"
                      color="#a9a9a9"
                      onClick={[Function]}
                      onMouseLeave={[Function]}
                      onMouseOver={[Function]}
                      size={24}
                    >
                      <IconBase
                        attr={
                          Object {
                            "fill": "currentColor",
                            "viewBox": "0 0 16 16",
                          }
                        }
                        className="sc-eCYdqJ lmMuIV"
                        color="#a9a9a9"
                        onClick={[Function]}
                        onMouseLeave={[Function]}
                        onMouseOver={[Function]}
                        size={24}
                      >
                        <svg
                          className="sc-eCYdqJ lmMuIV"
                          color="#a9a9a9"
                          fill="currentColor"
                          height={24}
                          onClick={[Function]}
                          onMouseLeave={[Function]}
                          onMouseOver={[Function]}
                          stroke="currentColor"
                          strokeWidth="0"
                          style={
                            Object {
                              "color": "#a9a9a9",
                            }
                          }
                          viewBox="0 0 16 16"
                          width={24}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"
                            key="0"
                          />
                        </svg>
                      </IconBase>
                    </BsStarFill>
                  </Styled(BsStarFill)>
                  <Styled(BsStarFill)
                    color="#a9a9a9"
                    key="2"
                    onClick={[Function]}
                    onMouseLeave={[Function]}
                    onMouseOver={[Function]}
                    size={24}
                  >
                    <BsStarFill
                      className="sc-eCYdqJ lmMuIV"
                      color="#a9a9a9"
                      onClick={[Function]}
                      onMouseLeave={[Function]}
                      onMouseOver={[Function]}
                      size={24}
                    >
                      <IconBase
                        attr={
                          Object {
                            "fill": "currentColor",
                            "viewBox": "0 0 16 16",
                          }
                        }
                        className="sc-eCYdqJ lmMuIV"
                        color="#a9a9a9"
                        onClick={[Function]}
                        onMouseLeave={[Function]}
                        onMouseOver={[Function]}
                        size={24}
                      >
                        <svg
                          className="sc-eCYdqJ lmMuIV"
                          color="#a9a9a9"
                          fill="currentColor"
                          height={24}
                          onClick={[Function]}
                          onMouseLeave={[Function]}
                          onMouseOver={[Function]}
                          stroke="currentColor"
                          strokeWidth="0"
                          style={
                            Object {
                              "color": "#a9a9a9",
                            }
                          }
                          viewBox="0 0 16 16"
                          width={24}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"
                            key="0"
                          />
                        </svg>
                      </IconBase>
                    </BsStarFill>
                  </Styled(BsStarFill)>
                  <Styled(BsStarFill)
                    color="#a9a9a9"
                    key="3"
                    onClick={[Function]}
                    onMouseLeave={[Function]}
                    onMouseOver={[Function]}
                    size={24}
                  >
                    <BsStarFill
                      className="sc-eCYdqJ lmMuIV"
                      color="#a9a9a9"
                      onClick={[Function]}
                      onMouseLeave={[Function]}
                      onMouseOver={[Function]}
                      size={24}
                    >
                      <IconBase
                        attr={
                          Object {
                            "fill": "currentColor",
                            "viewBox": "0 0 16 16",
                          }
                        }
                        className="sc-eCYdqJ lmMuIV"
                        color="#a9a9a9"
                        onClick={[Function]}
                        onMouseLeave={[Function]}
                        onMouseOver={[Function]}
                        size={24}
                      >
                        <svg
                          className="sc-eCYdqJ lmMuIV"
                          color="#a9a9a9"
                          fill="currentColor"
                          height={24}
                          onClick={[Function]}
                          onMouseLeave={[Function]}
                          onMouseOver={[Function]}
                          stroke="currentColor"
                          strokeWidth="0"
                          style={
                            Object {
                              "color": "#a9a9a9",
                            }
                          }
                          viewBox="0 0 16 16"
                          width={24}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"
                            key="0"
                          />
                        </svg>
                      </IconBase>
                    </BsStarFill>
                  </Styled(BsStarFill)>
                  <Styled(BsStarFill)
                    color="#a9a9a9"
                    key="4"
                    onClick={[Function]}
                    onMouseLeave={[Function]}
                    onMouseOver={[Function]}
                    size={24}
                  >
                    <BsStarFill
                      className="sc-eCYdqJ lmMuIV"
                      color="#a9a9a9"
                      onClick={[Function]}
                      onMouseLeave={[Function]}
                      onMouseOver={[Function]}
                      size={24}
                    >
                      <IconBase
                        attr={
                          Object {
                            "fill": "currentColor",
                            "viewBox": "0 0 16 16",
                          }
                        }
                        className="sc-eCYdqJ lmMuIV"
                        color="#a9a9a9"
                        onClick={[Function]}
                        onMouseLeave={[Function]}
                        onMouseOver={[Function]}
                        size={24}
                      >
                        <svg
                          className="sc-eCYdqJ lmMuIV"
                          color="#a9a9a9"
                          fill="currentColor"
                          height={24}
                          onClick={[Function]}
                          onMouseLeave={[Function]}
                          onMouseOver={[Function]}
                          stroke="currentColor"
                          strokeWidth="0"
                          style={
                            Object {
                              "color": "#a9a9a9",
                            }
                          }
                          viewBox="0 0 16 16"
                          width={24}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"
                            key="0"
                          />
                        </svg>
                      </IconBase>
                    </BsStarFill>
                  </Styled(BsStarFill)>
                </div>
              </FormGroup>
            </Styled(FormGroup)>
            <Styled(FormGroup)
              controlId="exampleForm.ControlTextarea1"
            >
              <FormGroup
                className="sc-hKMtZM eVOESk"
                controlId="exampleForm.ControlTextarea1"
              >
                <div
                  className="sc-hKMtZM eVOESk"
                >
                  <FormLabel
                    column={false}
                    visuallyHidden={false}
                  >
                    <label
                      className="form-label"
                      htmlFor="exampleForm.ControlTextarea1"
                    >
                      comment
                    </label>
                  </FormLabel>
                  <FormControl
                    as="textarea"
                    onChange={[Function]}
                    rows={3}
                    value=""
                  >
                    <textarea
                      className="form-control"
                      id="exampleForm.ControlTextarea1"
                      onChange={[Function]}
                      rows={3}
                      value=""
                    />
                  </FormControl>
                </div>
              </FormGroup>
            </Styled(FormGroup)>
            <Button
              active={false}
              disabled={false}
              type="submit"
              variant="primary"
            >
              <button
                className="btn btn-primary"
                disabled={false}
                type="submit"
              >
                Submit
              </button>
            </Button>
          </form>
        </Form>
      </div>
    </Container>
  </Styled(Container)>
</PostForm>
`;

exports[`PostForm component should match a snapshot (PostForm.test.tsx.snap) after clikc button 1`] = `
<Fragment>
  <LogInForm
    handleClose={[Function]}
    show={false}
  />
  <Styled(Container)>
    <Form
      onSubmit={[Function]}
    >
      <Styled(FormGroup)
        controlId="exampleForm.ControlInput1"
      >
        <Styled(BsStarFill)
          color="#a9a9a9"
          key="0"
          onClick={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          size={24}
        />
        <Styled(BsStarFill)
          color="#a9a9a9"
          key="1"
          onClick={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          size={24}
        />
        <Styled(BsStarFill)
          color="#a9a9a9"
          key="2"
          onClick={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          size={24}
        />
        <Styled(BsStarFill)
          color="#a9a9a9"
          key="3"
          onClick={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          size={24}
        />
        <Styled(BsStarFill)
          color="#a9a9a9"
          key="4"
          onClick={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          size={24}
        />
      </Styled(FormGroup)>
      <Styled(FormGroup)
        controlId="exampleForm.ControlTextarea1"
      >
        <FormLabel
          column={false}
          visuallyHidden={false}
        >
          comment
        </FormLabel>
        <FormControl
          as="textarea"
          onChange={[Function]}
          rows={3}
          value=""
        />
      </Styled(FormGroup)>
      <Button
        active={false}
        disabled={false}
        type="submit"
        variant="primary"
      >
        Submit
      </Button>
    </Form>
  </Styled(Container)>
</Fragment>
`;
